[package]
name = "Mesh"
version = "0.1.0"
edition = "2021"

[dependencies]
modular-bitfield = { version = "0.11" }
bitfields = "0.12"
postcard = { version = "1.1", features = ["defmt"] }
serde = { version = "1.0", features = ["derive"], default_features = false}
ublox = { version = "0.4", default-features = false, features = ["serde"]}
heapless = { version = "0.8", features = ["serde"]}